# AmiaBlog

./: .gitignore  LICENSE  README.md  config.json  main.py  pyproject.toml  staticify.py  utils.py
docs/: configuration.md  static-site-generation.md  writing-posts.md
languages/: en.json  zh-CN.json
posts/: amiablog-test-another-post.md  amiablog-test-hello.md
static/: markdown-it-footnote-4.0.0.min.js
static/hljs_11.1.1/: amiablog.min.css
static/material_icons/: material_icons.css
static/roboto/: roboto.css
templates/: base.html  error.html  friend_links.html  index.html  post.html  posts.html  search.html  tag.html  tags.html
